--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ body {
     transition: visibility 0s, opacity 0.5s ease-in-out;
 }
 
+.age.reset-animation {
+    animation: fadeIn 0.5s ease-in-out;
+}
+
 .age.visible {
     visibility: visible;
     opacity: 1;
